--- a/package.json
+++ b/package.json
@@ -1,20 +1,37 @@
 {
   "name": "api-pipeline",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon api/index.js"
-  },
-  "keywords": [],
-  "author": "",
+  "description": "API con CRUD de posts y usuarios, probada con Jest + Supertest",
+  "main": "api/index.js",
+  "author": "Víctor Pineda",
   "license": "ISC",
-  "description": "",
+  "scripts": {
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js",
+    "seed": "node scripts/seed.js",
+    "test": "jest --runInBand",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "lint": "eslint api --ext .js",
+    "format": "prettier --write \"api/**/*.js\""
+  },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "helmet": "^7.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.3.3",
+    "supertest": "^7.1.1"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "verbose": true,
+    "coverageDirectory": "./coverage",
+    "collectCoverageFrom": ["api/**/*.js", "!api/db/db.json"]
   }
 }
